k8s/pedidos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedidos
  namespace: pedidos-veloz
  labels:
    app: pedidos
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pedidos
  template:
    metadata:
      labels:
        app: pedidos
        version: "1.0.0"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pedidos
          image: lojaveloz/pedidos:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001
            initialDelaySeconds: 8
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pedidos
  namespace: pedidos-veloz
spec:
  selector:
    app: pedidos
  ports:
    - port: 3001
      targetPort: 3001
